  to use the library with less risk of class name collision
  
- Added -responseHeaders getter for GDataHTTPFetcher

- Added -fetchDocEntryWithURL for fetching a single doc entry

- Added -entryWithGPhotoID for findnig a photo or album with the given ID

- Added feed method for finding feed entries of a single kind

- Updated DocsSample with more folder support

Bugs Fixed

- Fixed finance portfolio description method (thanks dujunfly)


Release 1.5.0
23-October-2008
Changes since 1.4.0

Additions

- Services and tickets now support properties to make it easier to pass
  parameters to service callback methods.  Tickets inherit a copy of the
  properties set in the service instance.
  
- Added Google Finance, Webmaster Tools, and Google Books classes.

- Picasa Web class, method, and constant names changed to Google Photos

- Added support for contact groups and extended properties, and a method
  to generate contact feed URLs for projections.  Added methods to remove
  contact properties. (thanks stevec)  Added a service method to fetch a 
  contact entry given its URL.

- Added GDataXMLNode, a shim layer used for GDATA_IPHONE builds

- GDataObject extension mechanism now supports extensions for
  attributes as well as for elements.
  
- GDataObject base class now handles parsing, generation, copying,
  and comparison of local attributes.
  
- Added namespace utilities to GDataObject: completeNamespaces, 
  which returns a union of an objects declared namespaces with those of its
  parents, and pruneInheritedNamespaces, which removes an objects namespaces 
  if they are also declared by its parents.

- Added "strict" parameter to GDataQuery.

- Made changes to support 64-bit builds on Leopard.

- Added service support for Google AuthSub tokens.

- Added service methods for fetching ACL feeds and entries.

- Added a convenience routine for setting an entry's batch ID from a string.

- Added YouTube "most_popular" feed ID, and query parameters for location